--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 aiohttp==3.9.1
 aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==3.7.1
 appnope==0.1.3
 asttokens==2.4.1
 async-timeout==4.0.3
 attrs==23.1.0
 click==8.1.7
+colorama==0.4.6
 comm==0.2.0
 contourpy==1.2.0
 cycler==0.12.1
@@ -12,8 +15,11 @@ debugpy==1.8.0
 decorator==5.1.1
 exceptiongroup==1.2.0
 executing==2.0.1
+fastapi==0.104.1
 fonttools==4.45.1
 frozenlist==1.4.0
+h11==0.14.0
+httptools==0.6.1
 idna==3.6
 importlib-metadata==7.0.0
 importlib-resources==6.1.1
@@ -40,17 +46,24 @@ prompt-toolkit==3.0.41
 psutil==5.9.6
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pydantic==2.5.2
+pydantic_core==2.14.5
 Pygments==2.17.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
+pywin32==306
+PyYAML==6.0.1
 pyzmq==25.1.1
 rapidfuzz==3.5.2
 regex==2023.10.3
 scikit-learn==1.3.2
 scipy==1.11.4
 six==1.16.0
+sniffio==1.3.0
 stack-data==0.6.3
+starlette==0.27.0
 thefuzz==0.20.0
 threadpoolctl==3.2.0
 tornado==6.4
@@ -58,6 +71,9 @@ tqdm==4.66.1
 traitlets==5.14.0
 typing_extensions==4.8.0
 tzdata==2023.3
+uvicorn==0.24.0.post1
+watchfiles==0.21.0
 wcwidth==0.2.12
+websockets==12.0
 yarl==1.9.3
 zipp==3.17.0
