--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ pyparsing==3.1.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
-pywin32==306
+pywin32
 PyYAML==6.0.1
 pyzmq==25.1.1
 rapidfuzz==3.5.2
