--- a/requirements.txt
+++ b/requirements.txt
@@ -77,6 +77,6 @@ websockets==12.0
 yarl==1.9.3
 zipp==3.17.0
 black
-some-package==1.0.0
-; sys_platform == 'win32'
-pywin32==300
+#some-package==1.0.0
+#; sys_platform == 'win32'
+#pywin32==300
