--- a/requirements.txt
+++ b/requirements.txt
@@ -77,4 +77,4 @@ websockets==12.0
 yarl==1.9.3
 zipp==3.17.0
 black
-pypiwin32==223;sys_platform == 'Windows'
+pywin32==306;sys_platform == 'Windows'
